--- a/js/0-index.html
+++ b/js/0-index.html
@@ -9,6 +9,6 @@
 <body>
     <p>这里是一段文字哟</p>
 
-    <script src="./3-深拷贝js.js"></script>
+    <script src="./13-手写bind函数.js"></script>
 </body>
 </html>
